setup gh-pages fix

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "mentor",
+  "homepage": "https://H-Mateus.github.io/NHS-Hack-day---mentoring-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
     "predeploy" : "npm run build",
     "deploy" : "gh-pages -d build",
+    "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
