--- a/app.json
+++ b/app.json
@@ -35,7 +35,8 @@
       ]
     ],
     "experiments": {
-      "typedRoutes": true
+      "typedRoutes": true,
+      "baseUrl": "/NHS-Hack-day---mentoring-app"
     }
   }
 }
