--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "deploy": "gh-pages --nojekyll -d dist",
+    "predeploy": "expo export -p web",
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
